Twenty Seventeen: Fix spacing issue on pages with comments
This effected the two column layout on pages. The entry content and comment areas needed to be floated and cleared properly.

Props laurelfulford.

Fixes #38388.

Built from https://develop.svn.wordpress.org/trunk@38866


git-svn-id: http://core.svn.wordpress.org/trunk@38809 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyseventeen/rtl.css
+++ b/wp-content/themes/twentyseventeen/rtl.css
@@ -373,7 +373,8 @@ input[type="checkbox"] {
 	.search:not(.has-sidebar) #primary article,
 	.has-sidebar.error404 #primary .page-content,
 	.error404.has-sidebar #primary .page-content,
-	body.page-two-column #primary .entry-content {
+	body.page-two-column #primary .entry-content,
+	body.page-two-column #comments {
 		float: left;
 	}
 
